# willow-2.0

./: .all-contributorsrc  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .wt-test  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  CONTRIBUTORS.md  DRAFT_v2.md  DRAFT_v3.md  GEMINI.md  INDEX.md  LICENSE  OVERNIGHT-BRIEF-2026-07-14.md  README-FELIX.md  README.md  SECURITY_AUDIT.md  TRUST.md  VERSION  app.py  docker-compose.yml  fleet.py  ganas_client.py  grove_client.py  grove_coordination.py  grove_db.py  grove_reader.py  grove_serve.py  grove_session.py  grove_standalone.py  hero_test.py  ingest_seeds.py  init_db.py  install-windows.ps1  kart_worker.py  orchestrator.py  (+16 more)
.claude/: settings.json  skills
.codex/: config.toml
.cursor/: cli.json  commands  hooks.json  mcp.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.willow/: commands  mcp.json  skills  upstream-blocked-pr-summary.txt
apps/: __init__.py
apps/ratatosk/: README.md  config.example.json  pyproject.toml
apps/ratatosk/ratatosk/: __init__.py  capabilities.py  cli.py  doctor.py  listener.py  ollama.py  session.py  traces.py
apps/ratatosk/ratatosk/protocol/: __init__.py  envelope.py
apps/ratatosk/ratatosk/transport/: __init__.py  config.py  grove_client.py
apps/ratatosk/systemd/: ratatosk-listener.service
apps/ratatosk/termux/: install.sh  main.py  requirements.txt
apps/ratatosk/termux/boot/: ratatosk-listen.sh
apps/ratatosk/termux/shortcuts/: ask-willow.sh  continue-session.sh  emergency-stop.sh  send-desktop.sh  status.sh
apps/ratatosk/termux/ui/: __init__.py  base.py  terminal.py  tgui.py
apps/ratatosk/tests/: test_doctor.py  test_envelope.py  test_listener.py  test_transport.py
archive/: README.md
benchmarks/: README.md  catalog.json
constitution/: __init__.py  compliance.py  run_compliance.py
core/: actr.py  agent_identity.py  agent_namespace.py  atom_extractor.py  backup.py  bkt.py  boot_gate.py  bridge_factory.py  canonical_lanes.py  code_version.py  completion_verify.py  dream_state.py  egress_authority.py  embedder.py  fleet.py  gleipnir.py  graceful.py  grove_client.py  grove_db.py  grove_gate.py  grove_reader.py  grove_serve.py  grove_session.py  host_profile.py  human_attestation.py  human_required.py  inference_router.py  intake.py  intake_promote.py  intelligence.py  jeles_bridge.py  jeles_sources.py  jeles_verify.py  jukebox.py  kart_detached.py  kart_execute.py  kart_lane_guard.py  kart_lanes.py  kart_sandbox.py  kart_task_scan.py  (+45 more)
docs/: ADD_MCP_TOOL.md  AGENT_IDENTITY.md  ARCHITECTURE.md  ATOM_EXTRACTION_COMPLETE.md  ATOM_EXTRACTION_DESIGN.md  ATOM_EXTRACTION_QUICKSTART.md  BETA_AUDIT_REPORT.md  BRANDING.md  CODE_DIFF_1.9_to_2.0.md  CONCEPT.md  CONTRACT.md  FIRST_5_MINUTES.md  FOR_AHS.md  IDE_INTEGRATION.md  INDEX.md  KNOWN_GAPS.md  LANDING_DESIGN.md  MCP_SPEC_COMPLIANCE.md  MCP_TOOL_PROFILES.md  MEMORY_STACK.md  NEST_FEEDBACK_SCHEMA.md  OPENCLAW_DISCORD_SETUP.md  OPEN_WORK.md  PUBLIC_READY_V1.md  PUBLIC_REMOTE_BOOT.md  QUICKSTART.md  RAFT_ANALYSIS_SUMMARY.md  ROOT_LAYOUT.md  RUNTIME_AND_INFERENCE.md  SCHEDULED_JOBS.md  SKILL_AUDIT_CURSOR_VS_WILLOW.md  SKILL_SURFACE_STRATEGY.md  TECHNICAL_SPEC.md  UPSTREAM_CONTRIBUTION_STRATEGY.md  WILLOW_CONFIG.md  dev-log-2026-05-27-fleet-github-layout.md  dev-log-2026-06-12-current-cursor-benchmark-backfill.md  fleet-monitor.md  index.html  machine-path-audit.md  (+3 more)
grove/: __main__.py  mcp_auth.py  mcp_local.py  mouse.py  shell.py  theme.py
migrations/: 20260505_run_ledger.sql  20260518_evidence_tiers.sql  20260518_mcp_receipts.sql  20260522_bitemporal_all_tables.sql  20260522_wave1_renames.sql  20260522_wave2_additive.sql  20260522_wave3_semantic.sql  20260522_wave4_edges_pk.sql  20260524_journal_entries.sql  20260525_jeles_source_registry.sql  20260526_jeles_fn_name.sql
paperclip-research/: agent_15_contractor_genealogy.txt  agent_30_current_power.txt
sandbox/: .gitignore  README.md  __init__.py  __main__.py  cli.py  engine.py  fleet.py  gate_form.py  model.py  reporting.py  store.py
sap/: MCP_INSTRUCTIONS.md  MCP_SPEC.lock.json  ONBOARDING.md  README.md  cbm_facade.py  grove_tools.py  handoff_cli.py  handoff_index.py  handoff_paths.py  markdownai_mcp.sh  markdownai_server.mjs  mcp_enrich.py  mcp_guide.py  mcp_profiles.py  mcp_registry.json  middleware.py  openclaw_ingest.py  openclaw_mcp.py  reload.py  sap_mcp.py  sap_mcp_v1.py  security_middleware.py  unified_mcp.py  unified_mcp.sh  willow_mcp.sh  willow_run_compact.py
scratch/: test_skill_mastery.py  test_skill_mastery_gate.py
scripts/: archive_block_flags.py  audit_bitemporal.py  audit_canonical_home.sh  audit_file_jsonb_index.py  audit_safe_paths.py  audit_verify.py  backfill_handoff_project.py  bandit_first_party.sh  bench_node9_policy.py  binder_backfill_postgres_edges.py  bkt_seed_priors.py  bridge_cross_runtime.py  build_api_docs.sh  build_claude_sessions_db.py  build_q200.py  check_ide_parity.py  check_mcp_registry.py  ci_install_ripgrep.sh  cleanup_worktrees.sh  comfort_check.sh  commit_edges.py  consecrate_metabolic.sh  consolidate_github_layout.sh  consolidate_home_clones.py  constitution_compliance_witness.py  cross_session_gap_detector.py  dashboard_shutdown.py  discord_remote.py  extract_atoms_from_sessions.py  fetch_mcp_spec_index.sh  filesystem_groom_pass.py  fleet_data_repair.py  fleet_hardening_scan.py  fleet_hygiene_sweep.py  fleet_kb_ship_sweep.py  fleet_metabolic_sweep.py  fleet_repos.py  fleet_session_sweep.py  fleet_witness_sweep.py  ganas_client.py  (+121 more)
smart-home/: .gitignore  keys.json
store/: safe-app-store-index.md
systemd/: constitution-compliance.service  constitution-compliance.timer  drop-server.service  gitsync.service  gitsync.timer  grove-mcp.service  grove-serve.service  hook-wiring-audit.service  hook-wiring-audit.timer  host-divergence-watch.service  host-divergence-watch.timer  journal-watcher.service  kart-worker-batch.service  kart-worker.service  nest-watcher.service  orin-worker.service  repo-fleet-sweep.service  (+18 more)
(+1052 files in other folders)
