[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "willow"
version = "2.0.0"
description = "Willow 2.0 — local-first AI stack (Ollama by default)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.4.2",
    "cryptography>=48.0.0",
    "requests>=2.31.0",
    "mcp>=1.6.0,<2.0.0",
    "litellm>=1.87.0",
    "textual>=0.61.0",
    "starlette>=0.37.0",
    "uvicorn>=0.48.0",
    "aiohttp>=3.13.5",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
    "ruff",
    "mypy",
    "coverage",
    "pre-commit>=4.6.0",
    "bandit>=1.8.0",
    "pdoc>=15.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (enterprise-scale, deselect with -m 'not slow')",
    "unit: fast isolated unit tests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "sap*"]

[tool.ruff]
target-version = "py310"
extend-exclude = [
    "worktrees",
    "mcp-memory-service",
    "Ashokoa",
    "personal",
    "archive",
    "dashboard-fresh",
    ".kart-scripts",
    ".venv-dev",
    ".venv",
    "u2u",
]

[tool.ruff.lint.per-file-ignores]
# Intentional late imports after path/bootstrap or tool registration side effects.
"sap/sap_mcp.py" = ["E402"]
"sap/unified_mcp.py" = ["E402"]
"core/jeles_sources.py" = ["E402"]
"scripts/**" = ["E402"]
"tests/**" = ["E402"]
"willow/forks.py" = ["E402"]
"willow/fylgja/events/post_tool.py" = ["E402"]
"willow/fylgja/events/stop_slow.py" = ["E402"]
"willow/hooks/post_push.py" = ["E402"]

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    ".venv-dev",
    "worktrees",
    "stubs",
    "archive",
    "mcp-memory-service",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "stubs"
files = ["core", "sap", "willow"]
exclude = [
    "^u2u$",
    "worktrees/",
    "mcp-memory-service/",
    "Ashokoa/",
    "personal/",
    "archive/",
    ".kart-scripts/",
    "stubs/",
]
