[project]
name = "ratatosk-suite"
version = "0.1.0"
description = "Ratatosk local app suite — phone Termux + desktop listener"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
gui = ["termuxgui"]

[project.scripts]
ratatosk = "ratatosk.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ratatosk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
